--- a/LLM_IELTS_EXAMINER/requirements.txt
+++ b/LLM_IELTS_EXAMINER/requirements.txt
@@ -36,18 +36,18 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-langchain==1.0.2
-langchain-classic==1.0.0
-langchain-community==0.4
-langchain-core==1.0.1
-langchain-groq==1.0.0
-langchain-huggingface==1.0.0
-langchain-openai==0.3.33
-langchain-text-splitters==1.0.0
-langgraph==1.0.1
-langgraph-checkpoint==3.0.0
-langgraph-prebuilt==1.0.1
-langgraph-sdk==0.2.9
+langchain
+langchain-classic
+langchain-community
+langchain-core
+langchain-groq
+langchain-huggingface
+langchain-openai
+langchain-text-splitters
+langgraph
+langgraph-checkpoint
+langgraph-prebuilt
+langgraph-sdk
 langsmith==0.4.30
 MarkupSafe==3.0.3
 marshmallow==3.26.1
