--- a/LLM_IELTS_EXAMINER/requirements.txt
+++ b/LLM_IELTS_EXAMINER/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==3.4.3
 click==8.3.0
 dataclasses-json==0.6.7
 distro==1.9.0
+
 faiss-cpu==1.12.0
 filelock==3.19.1
 frozenlist==1.8.0
@@ -85,7 +86,7 @@ pydantic-settings==2.11.0
 pydantic_core==2.33.2
 pydeck==0.9.1
 pypdf==6.1.3
-python-dotenv==1.1.1
+python-dotenv
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.37.0
