--- a/LLM_IELTS_EXAMINER/requirements.txt
+++ b/LLM_IELTS_EXAMINER/requirements.txt
@@ -86,7 +86,7 @@ pydantic-settings==2.11.0
 pydantic_core==2.33.2
 pydeck==0.9.1
 pypdf==6.1.3
-python-dotenv
+python-dotenv==1.2.1
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.37.0
